--- a/css/blog.css
+++ b/css/blog.css
@@ -291,14 +291,38 @@ h2 {
 
 }
 
+/* Homepage */
+#home-top {
+  padding-bottom: 60px;
+  padding-top: 60px;
+  background: url("../crossword.png") repeat;
+}
+
+#home-top h1 {
+  font-weight: 500;
+}
+
+#home-top .btn {
+  font-size: 25px;
+}
+
+#home-top input.form-control {
+  font-size: 25px;
+  height: 50px;
+}
+
+#first-paragraph-home {
+  padding-top: 15px;
+}
+
 /* Styles for About page */
 
-#about img {
+#about img, #home-top img {
     margin-right: 30px;
     margin-bottom: 20px;
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 220px;
+    height: 220px;
     object-fit: cover;
 }
 
@@ -306,8 +330,8 @@ h2 {
   color: #e74c3c;
   font-family: "Open Sans";
   font-weight: 300;
-  padding-top: 45px;
   font-size: 35px;
+  padding-top: 40px;
 }
 
 #first-paragraph {
